...

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="0.25"
                app:icon="@drawable/abc_vector_test"
                />
...
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="List Layanan"
                android:textAlignment="center" />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAdd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.25"
                android:layout_margin="16dp"
                android:backgroundTint="#bc4b51"
                app:icon="@drawable/ic_baseline_add_24"
...
